# jms.utfcpp

./: AUTHORS  CMakeLists.txt  NOTICE.md  README.md
include/utfcpp/: concepts.hpp  core.hpp  decode_encode.hpp  exception.hpp  iterator.hpp  utfcpp.hpp  utility.hpp  views.hpp
tests/: CMakeLists.txt  core.test.cpp  iterator.test.cpp  utility.test.cpp  views.test.cpp
